--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/bebas-neue": "^4.5.8",
     "@fontsource/montserrat": "^4.5.12",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
